# code-adversary

./: .gitignore  README.md  cost.py  pyproject.toml  requirements.txt  server.py
opencode/plugin/: code-reviewer.ts
reviewer/: __init__.py  analyzer.py  checks.py  chunking.py  config.py  diff_parser.py  llm.py  llm_parsing.py  mcp_tools.py  models.py  prompts.py
